infrastructure/security/deptrack/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dependency-track-egress
  namespace: infra-security
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: dependency-track-api-server
  egress:
  - toFQDNs:
    - matchName: api.github.com
    - matchName: api.nuget.org
    - matchName: channels.nixos.org
    - matchName: crates.io
    - matchName: dl.google.com
    - matchName: epss.cyentia.com
    - matchName: epss.empiricalsecurity.com
    - matchName: fastapi.metacpan.org
    - matchName: github.com
    - matchName: hackage.haskell.org
    - matchName: hex.pm
    - matchName: maven.google.com
    - matchName: nvd.nist.gov
    - matchName: osv-vulnerabilities.storage.googleapis.com
    - matchName: packages.atlassian.com
    - matchName: proxy.golang.org
    - matchName: pypi.org
    - matchName: registry.npmjs.org
    - matchName: repo.clojars.org
    - matchName: repo.packagist.org
    - matchName: repo1.maven.org
    - matchName: repository.jboss.org
    - matchName: rubygems.org
    - matchPattern: '*.nvd.nist.gov'
    - matchPattern: 'europe-*-docker.pkg.dev'
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
      terminatingTLS:
        secret:
          name: cilium-mitm-cert-deptrack
          namespace: infra-security
      originatingTLS:
        secret:
          name: ca-certificates
          namespace: cert-manager
      rules:
        http:
        - method: GET
